update usage of a variable call make it bad way for solving a bug